--- a/Laboratorio 3/EstilosLab3.css
+++ b/Laboratorio 3/EstilosLab3.css
@@ -27,3 +27,21 @@ header{
     color: black;
     border-bottom: 3px dashed black
 }
+
+nav{
+    background: darkseagreen;
+    height: 50px;
+    border-bottom: 1px solid black;
+}
+
+nav ul li{
+    float: left;
+    list-style: none;
+    margin: 10px;
+    line-height: 30px;
+}
+
+.clearfix{
+    /*Los elementos de abajo se quedan en su sitio*/
+    clear:both;
+}
