--- a/Laboratorio 3/EstilosLab3.css
+++ b/Laboratorio 3/EstilosLab3.css
@@ -55,6 +55,28 @@ nav ul li{
     padding: 40px;
 }
 
+.article{
+    color: black;
+    margin-top: 15px;
+    margin-bottom: 15 px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.article h2{
+    font-size: 25px;
+}
+
+.article table, th, td{
+    border: 1px solid black;
+    border-collapse: separate;
+}
+
+.article:first-child{
+    padding-top: 10px;
+    border-top: 1px solid #eee;
+}
+
 aside{
     float: left;
     /*calc se utiliza para restar el padding de los márgenes. (Se utiliza el doble de pixeles)*/
@@ -70,5 +92,4 @@ footer{
     text-align: center;
     height: 50px;
     line-height: 50px;
-
 }
