--- a/Laboratorio 3/EstilosLab3.css
+++ b/Laboratorio 3/EstilosLab3.css
@@ -67,6 +67,10 @@ nav ul li{
     font-size: 25px;
 }
 
+.article h3{
+    font-size: 20px;
+}
+
 .article table, th, td{
     border: 1px solid black;
     border-collapse: separate;
