js en el template

--- a/Laboratorio 12/Public/js/lista.ejs
+++ b/Laboratorio 12/Public/js/lista.ejs
@@ -68,7 +68,15 @@
 
         <main class="container">
             
-
+            <% if (pizzas.length > 0) { %>
+                <ul>
+                    <% for (let pizza of pizzas) { %>
+                        <li><%= pizza %></li>
+                    <% } %>
+                </ul>
+            <% } else { %>
+                <h1>No hay pizzas >:( </h1>
+            <% } %>   
 
         </main>
 
