--- a/Laboratorio 12/views/lista.ejs
+++ b/Laboratorio 12/views/lista.ejs
@@ -68,15 +68,44 @@
 
         <main class="container">
             
-            <% if (pizzas.length > 0) { %>
-                <ul>
-                    <% for (let pizza of pizzas) { %>
-                        <li><%= pizza %></li>
-                    <% } %>
-                </ul>
-            <% } else { %>
-                <h1>No hay pizzas >:( </h1>
-            <% } %>   
+          <% if (pizzas.length > 0) { %>
+            <div class="columns is-multiline">
+                <% for (let pizza of pizzas) { %>
+                    <div class="column is-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-left">
+                                    <figure class="image is-48x48">
+                                        <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                    </figure>
+                                    </div>
+                                    <div class="media-content">
+                                    <p class="title is-4"><%= pizza %></p>
+                                    <p class="subtitle is-6">@johnsmith</p>
+                                    </div>
+                                </div>
+                            
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                                    <a href="#">#css</a> <a href="#">#responsive</a>
+                                    <br>
+                                    <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <% } %>
+            </div>
+        <% } else { %>
+            <h1>No hay pizzas >:( </h1>
+        <% } %>    
 
         </main>
 
