--- a/Laboratorio 12/views/lista.ejs
+++ b/Laboratorio 12/views/lista.ejs
@@ -7,28 +7,28 @@
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                            <img src="<%= pizza.imagen %>" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
                         <div class="media">
                             <div class="media-left">
                             <figure class="image is-48x48">
-                                <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                <img src="<%= pizza.imagen %>" alt="Placeholder image">
                             </figure>
                             </div>
                             <div class="media-content">
-                            <p class="title is-4"><%= pizza %></p>
-                            <p class="subtitle is-6">@johnsmith</p>
+                            <p class="title is-4"><%= pizza.nombre %></p>
+                            <p class="subtitle is-6"><%= pizza.handle %> $<%= pizza.precio %> </p>
                             </div>
                         </div>
                     
                         <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Phasellus nec iaculis mauris. <a>@bulmaio</a>.
-                            <a href="#">#css</a> <a href="#">#responsive</a>
+                            <%= pizza.descripcion %>
                             <br>
-                            <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+                            Ingredientes:
+                            <br>
+                            <%= pizza.ingredientes %>
                         </div>
                     </div>
                 </div>
