--- a/Laboratorio 18/views/login.ejs
+++ b/Laboratorio 18/views/login.ejs
@@ -15,7 +15,7 @@
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
 
     <label for="username">Nombre de usuario:</label>
-    <input name="username" id="username" class="input is-rounded" type="text" placeholder="lalo">
+    <input name="username" id="username" class="input is-rounded" type="text" placeholder="ivan">
 
     <label for="password">Password:</label>
     <input name="password" id="password" class="input is-rounded" type="password">
