dirección de imagen en carpeta uploads

--- a/Laboratorio 22/views/lista.ejs
+++ b/Laboratorio 22/views/lista.ejs
@@ -15,14 +15,14 @@
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                            <img src="<%= pizza.imagen %>" alt="Placeholder image">
+                            <img src="/uploads/<%= pizza.imagen %>" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
                         <div class="media">
                             <div class="media-left">
                             <figure class="image is-48x48">
-                                <img src="<%= pizza.imagen %>" alt="Placeholder image">
+                                <img src="/uploads/<%= pizza.imagen %>" alt="Placeholder image">
                             </figure>
                             </div>
                             <div class="media-content">
